infra/k8s/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biddinggo-api-deploy
  namespace: biddinggo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biddinggo-api
  template:
    metadata:
      labels:
        app: biddinggo-api
    spec:
      containers:
      - name: biddinggo-api
        image: ghcr.io/beyond-sw-camp/be25-2nd-biddingmate-biddinggo:latest
        resources:
          requests:
            memory: "512Mi"
            cpu: "500m"
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 8080
        startupProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          failureThreshold: 30
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
